# voice_typing

./: .gitignore  .swiftlint.yml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  Package.resolved  Package.swift  README.md  appcast.xml
.claude/: settings.json
.claude/hooks/: swift-precheck.sh
.github/workflows/: build.yml
Resources/: AppIcon.icns  Info.plist  VoiceTyping.entitlements
Resources/SileroVAD/: ATTRIBUTION.md  model.safetensors
Scripts/: fetch_english_fixtures.sh  fetch_fleurs_zh_fixtures.py  fetch_librispeech_fixtures.py  generate_icons.swift  record_fixture.sh  setup_cert.sh  spike_hotkey_keycode.swift
Scripts/analysis/: README.md  _common.py  focus_drop.py  hallucination_review.py  hotword_phonetic_replay.py  keep_alive.py  live_drain.py  pump_health.py  pyproject.toml  refine_quality.py  segment_latency.py  skip_gate_report.py  skip_refine_replay.py  summary.py
Scripts/perf/: hold_mlx_model.py  measure_footprint.sh
Scripts/release/: make_dmg.sh  set_dmg_icon.swift  update_appcast.py
Sources/VoiceTyping/: AppDelegate+HandsFree.swift  AppDelegate+Live.swift  AppDelegate.swift  AppState.swift  main.swift
Tests/Fixtures/: ATTRIBUTION.md  README.md  Tianshan.expected.json  fleurs_zh_long_12s_m_1529.expected.json  fleurs_zh_med_7s_m_1548.expected.json  fleurs_zh_medlong_8s_f_1566.expected.json  fleurs_zh_short_3s_f_1554.expected.json  fleurs_zh_xlong_18s_m_1542.expected.json  jfk_en_short.expected.json  (+9 more)
docs/: STATE.md  architecture.md  conventions.md  debug-captures.md  gotchas.md  release-process.md  roadmap.md  runbook.md
(+134 files in other folders)
